--- a/HW1/Makefile
+++ b/HW1/Makefile
@@ -1,13 +1,25 @@
 CC = gcc
-CFLAG = -lpthread
+LIB = -lpthread
+LIB2 = -lpthread -lsocket -lnsl
 
-all: myftpserver myftpclient
+all: 
+	@if [ "`uname -s`" = "Linux" ] ; then \
+		make myftpclientlinux myftpserverlinux ; \
+	else \
+		make myftpclientunix myftpserverunix ; \
+	fi
 
-myftpserver: myftpserver.c
-	$(CC) -o $@ $< $(CFLAG)
+myftpserverlinux: 
+	$(CC) -o myftpserver myftpserver.c $(LIB)
 
-myftpclient: myftpclient.c
-	$(CC) -o $@ $< $(CFLAG)
+myftpclientlinux: 
+	$(CC) -o myftpclient myftpclient.c $(LIB)
+
+myftpserverunix: 
+	$(CC) -o myftpserver myftpserver.c $(LIB2)
+
+myftpclientunix: 
+	$(CC) -o myftpclient myftpclient.c $(LIB2)
 
 clean:
 	rm myftpserver myftpclient 
